# USRP-Radar-Relay

./: CMakeLists.txt  Common.hpp  Debug.cpp  Debug.hpp  README  RadarClient.cpp  RadarJsonRpc.cpp  RadarJsonRpc.hpp  RadarRpcClient.cpp  RadarRpcClient.hpp  RadarRpcServer.cpp  RadarRpcServer.hpp  RadarServer.cpp  UsrpRadarRelay.cpp  UsrpRadarRelay.hpp  UsrpRadarRelay_Continuous.cpp  UsrpRadarRelay_OnDemand.cpp
RPC-commands/: config_5500MHz_1Msps_20dB.txt  config_5505MHz_20Msps_15dB.txt  pattern_continuous_100kHz.txt  pattern_continuous_10kHz.txt  pattern_continuous_1kHz.txt  pattern_continuous_2kHz.txt  pattern_continuous_5kHz.txt  pattern_custom_5bursts_50ms.txt  pattern_single_ETSI_type1.txt
